--- a/inventory.html
+++ b/inventory.html
@@ -20,6 +20,8 @@
                 <a href="customer-invoices.html" class="nav-link">📋 Customer Sales Orders</a>
                 <a href="shipments.html" class="nav-link">🚚 Shipments</a>
                 <a href="inventory.html" class="nav-link active">📦 Inventory</a>
+                <a href="accounting.html" class="nav-link">💰 Accounting</a>
+                <a href="customer-wallet.html" class="nav-link">💳 E-Wallet</a>
                 <button class="theme-toggle" onclick="toggleTheme()" title="Toggle dark/light mode">
                     <span class="theme-icon">🌙</span>
                 </button>
