--- a/shipments.html
+++ b/shipments.html
@@ -25,6 +25,14 @@
                     <span class="nav-icon">🚚</span>
                     Shipments
                 </a>
+                <a href="accounting.html" class="nav-link">
+                    <span class="nav-icon">💰</span>
+                    Accounting
+                </a>
+                <a href="customer-wallet.html" class="nav-link">
+                    <span class="nav-icon">💳</span>
+                    E-Wallet
+                </a>
                 <button class="theme-toggle" onclick="toggleTheme()" title="Toggle dark/light mode">
                     <span class="theme-icon">🌙</span>
                 </button>
