🎨 Fix navigation bar and implement left sidebar navigation
✨ Features Added:
- Fixed top navigation bar inconsistencies across all pages
- Implemented complete left sidebar navigation for shipments page
- Added responsive mobile navigation with toggle functionality
- Standardized navigation structure and styling

🔧 Technical Improvements:
- Added missing CSS for .sidebar class and layout
- Implemented proper sidebar positioning and responsive behavior
- Enhanced mobile navigation with collapsible menu
- Added navigation toggle functions in JavaScript
- Standardized navigation icons and active states

📱 Responsive Design:
- Desktop: Full sidebar (280px) and top navigation
- Mobile: Collapsible sidebar with toggle button
- Responsive top navigation with mobile menu
- Proper theme toggle positioning

📁 Files Modified:
- styles.css: Added sidebar styles, improved top nav, mobile responsive
- shipments.html: Fixed sidebar implementation with proper structure
- inventory.html: Standardized navigation to match other pages
- script.js: Added toggleSidebar() and mobile navigation functions

🎯 Navigation Types:
- Top Navigation: Fixed horizontal bar (index, accounting, wallet, inventory)
- Left Sidebar: Fixed vertical sidebar (shipments page)
- Both types fully responsive and consistent

--- a/shipments.html
+++ b/shipments.html
@@ -14,12 +14,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bidi-js@1.0.3/lib/bidi.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <nav class="sidebar">
+    <!-- Mobile sidebar toggle -->
+    <button class="sidebar-toggle" onclick="toggleSidebar()" style="display: none;">☰</button>
+
+    <div class="container sidebar-layout">
+        <nav class="sidebar" id="sidebar">
             <div class="nav-links">
                 <a href="index.html" class="nav-link">
                     <span class="nav-icon">📋</span>
                     Master Order
+                </a>
+                <a href="inventory.html" class="nav-link">
+                    <span class="nav-icon">📦</span>
+                    Inventory
                 </a>
                 <a href="shipments.html" class="nav-link active">
                     <span class="nav-icon">🚚</span>
