--- a/inventory.html
+++ b/inventory.html
@@ -8,20 +8,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <h1>📦 Inventory Management</h1>
+                <h2>📦 Inventory Management</h2>
             </div>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">🏠 Master Order Page</a>
-                <a href="purchase-orders.html" class="nav-link">🛒 Purchase Orders</a>
-                <a href="customer-invoices.html" class="nav-link">📋 Customer Sales Orders</a>
-                <a href="shipments.html" class="nav-link">🚚 Shipments</a>
-                <a href="inventory.html" class="nav-link active">📦 Inventory</a>
-                <a href="accounting.html" class="nav-link">💰 Accounting</a>
-                <a href="customer-wallet.html" class="nav-link">💳 E-Wallet</a>
+                <a href="index.html" class="nav-link">
+                    <span class="nav-icon">📋</span>
+                    Master Order
+                </a>
+                <a href="inventory.html" class="nav-link active">
+                    <span class="nav-icon">📦</span>
+                    Inventory
+                </a>
+                <a href="shipments.html" class="nav-link">
+                    <span class="nav-icon">🚚</span>
+                    Shipments
+                </a>
+                <a href="accounting.html" class="nav-link">
+                    <span class="nav-icon">💰</span>
+                    Accounting
+                </a>
+                <a href="customer-wallet.html" class="nav-link">
+                    <span class="nav-icon">💳</span>
+                    E-Wallet
+                </a>
                 <button class="theme-toggle" onclick="toggleTheme()" title="Toggle dark/light mode">
                     <span class="theme-icon">🌙</span>
                 </button>
