feat: Implement unified left sidebar navigation across all pages
- Replace top horizontal navbar with consistent left sidebar navigation
- Update CSS with comprehensive sidebar styling using CSS variables
- Standardize navigation structure across index.html, inventory.html, and shipments.html
- Add sidebar header with brand icon and title
- Implement main-content layout with proper spacing for sidebar
- Update theme toggle button styling for sidebar integration
- Ensure consistent navigation links and active states
- Add proper responsive layout with fixed sidebar and scrollable main content

Key improvements:
- Unified user experience across all pages
- Better space utilization with left sidebar
- Consistent branding and navigation structure
- Enhanced visual hierarchy and accessibility
- Proper semantic HTML structure with nav and main elements

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-brand">
-                <h2>Sourcing Agent</h2>
-            </div>
+    <!-- Left Sidebar Navigation -->
+    <nav class="sidebar">
+        <div class="sidebar-header">
+            <h1 class="sidebar-brand">
+                <span class="sidebar-brand-icon">🏢</span>
+                Sourcing Agent
+            </h1>
+        </div>
+        <div class="sidebar-nav">
             <div class="nav-links">
                 <a href="index.html" class="nav-link active">
                     <span class="nav-icon">📋</span>
@@ -34,14 +37,16 @@
                     <span class="nav-icon">🚚</span>
                     Shipments
                 </a>
-                <button class="theme-toggle" onclick="toggleTheme()" title="Toggle dark/light mode">
-                    <span class="theme-icon">🌙</span>
-                </button>
             </div>
+            <button class="theme-toggle" onclick="toggleTheme()" title="Toggle dark/light mode">
+                <span class="theme-icon">🌙</span>
+            </button>
         </div>
     </nav>
 
-    <div class="container">
+    <!-- Main Content Area -->
+    <main class="main-content">
+        <div class="container">
         <header class="header">
             <h1>Master Order</h1>
             <p>Create and manage customer sales orders</p>
@@ -1351,6 +1356,9 @@
             </div>
         </div>
     </div>
+
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
